Untappd will be discontinuing our standard HTTP API endpoint on 2/1/15. This plugin was updated to use their new HTTPS endpoint.
Added the ability to paginate results which can be enabled and disabled.

Added the ability to control the css display of the pagination button when pagination is enabled.

git-svn-id: https://plugins.svn.wordpress.org/retappd/trunk@1066282 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wp-retappd.css
+++ b/css/wp-retappd.css
@@ -1,1 +1,2 @@
 .retappd-credits { font-size: 11px; padding:5px; }
+#load-more-retappd { display:block; 	padding:20px 30px 20px 30px; width:100%; text-decoration:none; cursor:pointer; }#retappd-loading { display:none; }
